--- a/index.html
+++ b/index.html
@@ -56,5 +56,14 @@
   <body>
     <div id="root"></div>
   <script type="module" src="/index.tsx"></script>
+  <script>
+  (function () {
+    const params = new URLSearchParams(window.location.search);
+    const redirect = params.get("redirect");
+    if (redirect) {
+      window.history.replaceState(null, "", redirect);
+    }
+  })();
+</script>
 </body>
 </html>
