--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <meta name="theme-color" content="#4f46e5" />
     <meta name="mobile-web-app-capable" content="yes">
     <title>InstaBill India</title>
-    <link rel="manifest" href="./manifest.json" />
+    <link rel="manifest" href="/instabill/manifest.json" />
+
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=JetBrains+Mono:wght@400;500&display=swap" rel="stylesheet">
     <style>
